// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/EditText should render default val when can edit 1`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    default edit text
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <span
        class="custom-icon custom-icon-edit css-u3jcp4"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`lib/EditText should render default when not have val 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      编 辑
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit  value input when textarea onEnd 1`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    value-end
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <span
        class="custom-icon custom-icon-edit css-u3jcp4"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`lib/EditText should render edit  value input when textarea onEnd 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      value-end
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit  value input when textarea onEnd 3`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      value-end
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only has-icon-primary basic-button-wrapper css-geipcv"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        class="custom-icon custom-icon-edit css-u3jcp4"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    />
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 3`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      change_val
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 4`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only has-icon-primary basic-button-wrapper css-geipcv"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        class="custom-icon custom-icon-edit css-u3jcp4"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit input when textarea onEnd 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only has-icon-primary basic-button-wrapper css-geipcv"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        class="custom-icon custom-icon-edit css-u3jcp4"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit input when textarea onEnd 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    />
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea onEnd 3`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      textareaEle
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit value input when textarea change 1`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    value-change
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <span
        class="custom-icon custom-icon-edit css-u3jcp4"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`lib/EditText should render edit value input when textarea change 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      value-change
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit value input when textarea change 3`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    value-change
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <span
        class="custom-icon custom-icon-edit css-u3jcp4"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
